fix table cell spacing

--- a/src/app/gestion/gestion.css
+++ b/src/app/gestion/gestion.css
@@ -177,7 +177,6 @@ background-color: #7e1e1e;
 }
 
 
-/* Wrapper general que contiene cabecera + cuerpo */
 .gestion-scroll-wrapper {
   width: 100%;
   border-radius: 0.35rem;
@@ -185,9 +184,8 @@ background-color: #7e1e1e;
   overflow: hidden;
 }
 
-/* Fijamos el encabezado de la tabla */
 .users-table-head {
-  table-layout: fixed;
+  table-layout: auto;
   width: 100%;
   background-color: #fff;
   border-collapse: collapse;
@@ -201,14 +199,6 @@ background-color: #7e1e1e;
   height: 5rem;
 }
 
-.users-table-head th {
-  padding: 1rem;
-  text-align: left;
-  line-height: 1.2;
-  white-space: nowrap;
-  border-left: 1px solid #9e2d2d;
-}
-
 .gestion-table-body-container {
   max-height: 800px;
   overflow-y: auto;
@@ -216,17 +206,10 @@ background-color: #7e1e1e;
 }
 
 .users-table-body {
-  table-layout: fixed;
+  table-layout: auto;
   width: 100%;
   border-collapse: collapse;
   background-color: #fff;
-}
-
-.users-table-body td {
-  padding: 1rem;
-  text-align: left;
-  line-height: 1.2;
-  text-overflow: ellipsis;
 }
 
 .users-table-body tr {
@@ -239,6 +222,49 @@ background-color: #7e1e1e;
   background-color: #f5f5f5;
 }
 
+.users-table td {
+  padding: 2rem 1.5rem;
+  font-size: 15px;
+  font-weight: normal;
+  text-align: left;
+  /* white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  box-sizing: border-box; */
+}
+
+.users-table th {
+  padding: 0.75rem;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: left;
+  /* white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
+  white-space: normal; */
+}
+
+.users-table th:first-child {
+  padding-left: 1.25rem;
+}
+
+.users-table th:nth-child(2) {
+  padding-left: 1.25rem;
+}
+
+.users-table th:nth-child(3) {
+  padding-left: 1rem;
+}
+
+.users-table th:nth-child(4) {
+  padding-left: 0.75rem;
+}
+
+.users-table th:nth-child(5) {
+  padding-left: 0.5rem;
+}
+
 .cell-content {
   max-height: 5rem;
   overflow: hidden;
@@ -247,6 +273,8 @@ background-color: #7e1e1e;
   -webkit-box-orient: vertical;
   white-space: normal;
 }
+
+
 
 .loading-msg {
   padding: 1rem;
